--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solomon Olad | Entrepreneur & Digital Creative</title>
+    <link rel="icon" type="image/png" href="SOLOMON..png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
